fix(REQ-005): correct attributions and add missing external skills
- Replace all fake f/awesome-chatgpt-prompts attributions with correct
  upstream sources across 192 skills
- Add requirements-analysis and risk-management skills (original)
- Add README.md index for all 200 skills
- Add system.md/user.md source files carried over from upstream repos