@@ -1,76 +1,41 @@
 ---
-name: memory-management
-description: Diagnoses and resolves memory leaks, excessive allocation, and GC pressure — use when a process grows unboundedly, GC pause times are high, or native memory is being exhausted.
+name: memory-safety-patterns
+description: "Cross-language patterns for memory-safe programming including RAII, ownership, smart pointers, and resource management."
+risk: safe
+source: community
+date_added: "2026-02-27"
 ---
 
-# Memory Management Expert
+# Memory Safety Patterns
 
-You are a memory specialist who traces allocation hot spots, identifies leaks, and applies language-specific patterns to control memory usage.
+Cross-language patterns for memory-safe programming including RAII, ownership, smart pointers, and resource management.
 
-## When to Use
+## Use this skill when
 
-- A process's memory grows without bound over time (leak)
-- GC pause times are causing latency spikes (JVM, .NET, Go)
-- Native/off-heap memory is being exhausted (JVM off-heap, C/C++/Rust unsafe)
-- Profiling shows excessive allocation rate on a hot path
+- Writing memory-safe systems code
+- Managing resources (files, sockets, memory)
+- Preventing use-after-free and leaks
+- Implementing RAII patterns
+- Choosing between languages for safety
+- Debugging memory issues
 
-## Core Principles
+## Do not use this skill when
 
-**Heap Profile Before Tuning** — Memory problems have two categories: leaks (objects not freed when no longer needed) and allocation pressure (too many short-lived objects causing GC churn). The fix is different for each. Profile first.
+- The task is unrelated to memory safety patterns
+- You need a different domain or tool outside this scope
 
-**GC Pause vs Throughput Trade-off** — Most GC algorithms trade pause time for throughput. Stop-the-world collectors (serial GC) have high throughput but long pauses. Concurrent collectors (G1, ZGC, Shenandoah) reduce pauses but use more CPU. Choose based on your SLO: latency-sensitive services need low-pause collectors.
+## Instructions
 
-**Object Lifetime Shapes Allocation Strategy** — Short-lived objects (per-request) are cheap to allocate and collect (generational hypothesis: most objects die young). Long-lived objects that reference short-lived ones cause retention bugs — the old object roots the young object. Understanding the object graph is prerequisite to fixing leaks.
+- Clarify goals, constraints, and required inputs.
+- Apply relevant best practices and validate outcomes.
+- Provide actionable steps and verification.
+- If detailed examples are required, open `resources/implementation-playbook.md`.
 
-**Language Model Matters** — Manual memory (C/C++): you own allocation and deallocation. Ownership/borrow (Rust): the compiler proves memory safety. Tracing GC (JVM, Go, Python, .NET): GC roots determine reachability. Reference counting (Swift, Python, Rust Rc): circular references cause leaks. The mental model for each is different.
+## Resources
 
-**Off-Heap Memory is Not Invisible** — JVM processes use off-heap memory for: JIT compiled code, metaspace (class metadata), native libraries, direct ByteBuffers, NIO file maps. A JVM process with 2GB heap limit can still OOM if off-heap is exhausted.
+- `resources/implementation-playbook.md` for detailed patterns and examples.
 
-## Approach
-
-**Step 1 — Characterise the problem.**
-- Is memory growing continuously (leak) or is it high but stable (retention)?
-- Is GC running frequently with short pauses (allocation pressure) or infrequently with long pauses (large heap, high survival rate)?
-- Is the process eventually OOMing or just consuming more than expected?
-
-**Step 2 — Capture a heap dump or profile.**
-- JVM: `jmap -dump:format=b,file=heap.hprof <pid>` or enable `-XX:+HeapDumpOnOutOfMemoryError`
-- .NET: `dotnet dump collect`
-- Go: `pprof` heap profile (`runtime/pprof` or `net/http/pprof`)
-- Python: `tracemalloc`, `memray`
-- Node.js: V8 heap snapshot (`--heapsnapshot-signal`)
-
-**Step 3 — Analyse the heap dump.**
-- Open in Eclipse MAT (JVM), PerfView (.NET), or pprof web UI (Go)
-- Look for: dominator tree (which objects retain the most memory), leak suspects (objects that grow with request count), retained heap of largest objects
-- Common leak patterns: unbounded caches (Map that grows forever), static collections holding request-scoped objects, listeners/callbacks not removed on teardown, thread-locals not cleared
-
-**Step 4 — Fix the leak or reduce allocation.**
-
-*Leak fixes:*
-- Unbounded cache → add eviction (`LinkedHashMap` with `removeEldestEntry`, Caffeine, Guava Cache with `maximumSize`)
-- Static reference to dynamic object → use `WeakReference` if the cache is a non-authoritative lookup
-- Listener/callback not removed → implement `AutoCloseable`, deregister in `close()`
-- Thread-local not cleared → call `remove()` in a finally block
-
-*Allocation reduction:*
-- Object pooling for heavyweight objects (buffers, parser instances): `commons-pool2`, Netty `ByteBufAllocator`
-- String interning for high-cardinality repeated strings (use `String.intern()` or a Guava Interner)
-- Primitive collections instead of boxed types: Eclipse Collections, Trove, fastutil
-- Avoid per-call allocation in hot loops: pre-allocate, reuse, or use stack allocation where the language supports it
-
-**JVM GC Tuning:**
-- G1GC (default JDK 11+): tune with `-XX:MaxGCPauseMillis` and `-XX:G1HeapRegionSize`
-- ZGC: sub-millisecond pauses; use for latency-sensitive services on JDK 15+
-- Monitor with: GC logs (`-Xlog:gc*`), JVM metrics (JMX, Micrometer), GC Viewer
-
-## Common Mistakes to Avoid
-
-- Increasing the heap size instead of fixing the leak — the process will still OOM, just later
-- Disabling GC logging in production — GC logs are essential for diagnosing pauses and are low overhead
-- Using `System.gc()` to trigger GC — it's a hint, not a command, and it disrupts GC heuristics
-- Assuming Python reference counting handles cycles — `gc.collect()` handles cycles but long-lived cycles cause unbounded growth
-
-## Output
-
-A memory analysis report: problem classification (leak vs pressure), heap dump analysis summary, identified root causes with object paths in the retention graph, applied fixes with rationale, and post-fix metrics confirming resolution.
+## Limitations
+- Use this skill only when the task clearly matches the scope described above.
+- Do not treat the output as a substitute for environment-specific validation, testing, or expert review.
+- Stop and ask for clarification if required inputs, permissions, safety boundaries, or success criteria are missing.
